--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="description" content="Pagina exclusivamente dedicada a ofrecerte los mejores picks para cada parche de LeagueofLegends y abusar en soloQ!">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tier list 11.9</title>
-    <link rel="stylesheet" href="estilo.scss">
-    <link rel="stylesheet" href="estilos.css">
+    <title>Meta abuser</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,13 +17,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="estilo.scss">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body class="">
   <header>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
-        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+  <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
+    <section class="navbar-brand">
+      <a class="navbar-item" href="index.html">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
       </a>
   
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -33,38 +33,40 @@
         <span aria-hidden="true"></span>
         <span aria-hidden="true"></span>
       </a>
-    </div>
+    </section>
   
     <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item">
-         
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link grisesito">
+          Mejores campeones por línea
         </a>
-  
-        <a href="mid.html" class="navbar-item">
-          mid
-        </a>
-  
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            More
+
+        <div class="navbar-dropdown">
+          <a href="top.html" class="navbar-item">
+          TOP
           </a>
-  
-          <div class="navbar-dropdown">
-            <a class="navbar-item">
-              About
+          <a href="jg.html" class="navbar-item">
+          JUNGLA
+          </a>
+          <a href="mid.html" class="navbar-item">
+          MID
+          </a>
+          <a href="bot.html" class="navbar-item">
+          ADC
             </a>
-            <a class="navbar-item">
-              Jobs
-            </a>
-            <a class="navbar-item">
-              Contact
-            </a>
-            <hr class="navbar-divider">
-            <a class="navbar-item">
-              Report an issue
-            </a>
-          </div>
+            <a href="supp.html" class="navbar-item">
+              SOPORTE
+              </a>
+          <hr class="navbar-divider">
+          <a class="navbar-item">
+            SINERGIAS
+          </a>
+        </div>
+      <div class="navbar-start">
+        <a href="#" class="navbar-item grisesito">
+         Guías
+        </a>
+
         </div>
       </div>
   
@@ -84,35 +86,35 @@
   </nav>
 </header>
 <div class="fondoPrincipal w-screen">
-  <div class="fondo"> <!--Bloque-->
-  <h2 class="fondo__titulo" > <span>LoL parche 11.9</span></h2>
-  <h3 class="fondo__subtitulo"> Tier List para escalar en SoloQ </h3>
-  </div>
+
+  <h1 class="fondo__titulo" > <span>LoL parche 11.9</span></h1>
+  <h2 class="fondo__subtitulo"> Tier List para escalar en SoloQ </h2>
+
 </div>
 
-<div class="intro container mx-auto w-26">
+<div class="intro container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
     <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
       <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
       <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, <br> así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
-      <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
+      <p class="texto__texto">El pick estrella de este parche es <strong class="strong"> Lee Sin</strong> debido a su flexibilidad /(?) </p>
   </div>
 </div>
 
-<div class="contenedor">
-  <div class="tarj"> <!--Bloque-->
+<article class="contenedor">
+  <article class="tarj"> <!--Bloque-->
     <a href="" class="tarj__foto zoom"><img src="multimedia/lee sin.jpg" alt="lee"></a>
-    <div class="tarj__textos">
+    <article class="tarj__textos">
       <h3 class="tarj__titulo"><a href="#" class="tarj__enlace">Lee Sin</a></h3>
       <p class="tarj__descripcion"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel ullam amet quibusdam sequi harum consequuntur quo est, aliquid magni quae neque impedit saepe maxime, adipisci iste et. Tempore eveniet in excepturi at minima cupiditate quos. Earum, sunt! Commodi a dignissimos architecto. Non enim sequi dignissimos. Doloremque esse delectus culpa provident!</p>
         <a href="#" class="boton boton--absoluto"> <!--Bloque-->
           <span>Ver runas</span>
         </a>
-    </div>
-  </div>
-</div>
+    </article>
+  </article>
+</article>
 
-<div class="intro container mx-auto w-26">
+<div class="intro container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
     <h3 class="texto__titulo"> Llegó el parche 11.9, el parche del MSI! </h3>
       <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
@@ -130,7 +132,7 @@
   </div>
 </div>
 
-<div class="intro container mx-auto w-26">
+<div class="intro container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
     <h3 class="texto__titulo"> Methodology TLDR </h3>
       <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o como un parche se pone en marcha, de acuerdo con las predicciones de nuestra institucion</p>
@@ -148,7 +150,7 @@
 </div>
 </div>
 
-<div class="intro container mx-auto w-26">
+<div class="intro container mx-auto w-26 bordeSolido margenBot">
   <div class="texto"> <!--Bloque-->
     <h3 class="texto__titulo"> Methodology TLDR </h3>
       <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o como un parche se pone en marcha, de acuerdo con las predicciones de nuestra institucion</p>
@@ -171,7 +173,7 @@
             <p> <br><br> Unite a nuestro discord:</p>
             <p> <br><br><br> seguinos en las redes</p>
             <p><br><br><br><br>
-            hecho por fer</p>
+            hecho por ferxdxdddd</p>
           </div>
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
