--- a/jg.html
+++ b/jg.html
@@ -8,8 +8,6 @@
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tier list 11.9</title>
-    <link rel="stylesheet" href="estilo.scss">
-    <link rel="stylesheet" href="estilos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -19,12 +17,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="estilo.scss">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
+  <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
-        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      <a class="navbar-item" href="index.html">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="112" height="28">
       </a>
   
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -35,35 +35,52 @@
     </div>
   
     <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item">
-          asd
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a class="navbar-link grisesito">
+          Mejores campeones por línea
         </a>
-  
-        <a class="navbar-item">
-          Documentation
-        </a>
-  
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link">
-            More
+
+        <div class="navbar-dropdown">
+          <a href="top.html" class="navbar-item">
+          TOP
           </a>
+          <a href="jg.html" class="navbar-item">
+          JUNGLA
+          </a>
+          <a href="mid.html" class="navbar-item">
+          MID
+          </a>
+          <a href="bot.html" class="navbar-item">
+          ADC
+            </a>
+            <a href="supp.html" class="navbar-item">
+              SOPORTE
+              </a>
+          <hr class="navbar-divider">
+          <a class="navbar-item">
+            SINERGIAS
+          </a>
+        </div>
+      <div class="navbar-start">
+        <a href="#" class="navbar-item grisesito">
+         Guías
+        </a>
   
-          <div class="navbar-dropdown">
-            <a class="navbar-item">
-              About
-            </a>
-            <a class="navbar-item">
-              Jobs
-            </a>
-            <a class="navbar-item">
-              Contact
-            </a>
-            <hr class="navbar-divider">
-            <a class="navbar-item">
-              Report an issue
-            </a>
-          </div>
+        <a href="#" class="navbar-item grisesito">
+          Jungla
+        </a>
+
+        <a href="#" class="navbar-item grisesito">
+          Mid
+        </a>
+  
+        <a href="#" class="navbar-item grisesito">
+          ADC
+        </a>
+
+        <a href="#" class="navbar-item grisesito">
+          Support
+        </a>
         </div>
       </div>
   
@@ -82,10 +99,8 @@
     </div>
   </nav>
   <div class="fondoJg">
-    <div class="jg"> <!--Bloque-->
     <h2 class="jg__titulo" > <span>LoL parche 11.9</span></h2>
     <h3 class="jg__subtitulo"> Tier List para escalar en SoloQ </h3>
-    </div>
   </div>
 
   <div class="intro">
@@ -156,18 +171,59 @@
 
 
   <footer> <!--Bloque-->
-    <article class="centrar">
-      <label for="index.html" id="menu" class="centrar"></label>
-      <a href="facebook.com" class="centrar">Facebook</a>
-      <a href="instagram.com">Instagram</a>
-      <a href="gmail.com">Correo electrónico</a>
-      <a href="googlemaps.com">Ubicación</a>
-    </article>
-
-    <h6><strong>Meta abuser</strong></h4>
-
-
-</footer>
+    <div class="centrar">
+      <div class="container">
+        <div class="row">
+          <div class="col-4">
+            <p class="pad20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+            <p> <br><br> Unite a nuestro discord:</p>
+            <p> <br><br><br> seguinos en las redes</p>
+            <p><br><br><br><br>
+            hecho por ferxdxdddd</p>
+          </div>
+          <div class="col">
+            <h4 class="fTitulos">TOP</h4>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+          </div>
+          <div class="col">
+            <h4 class="fTitulos">JUNGLA</h4>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+          </div>
+          <div class="col">
+            <h4 class="fTitulos">MID</h4>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+          </div>
+          <div class="col">
+            <h4 class="fTitulos">ADC</h4>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+          </div>
+          <div class="col">
+            <h4 class="fTitulos">SUPPORT</h4>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Tier list top </a></p>
+          </div>
+        </div>
+      </div>
+  </div>
 
   <!--JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
