nuevas actualizaciones en la pagina

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
             SINERGIAS
           </a>
         </div>
+        
       <div class="navbar-start">
-        <a href="#" class="navbar-item grisesito">
+        <a href="supp.html" class="navbar-item grisesito">
          Guías
         </a>
 
@@ -72,14 +73,6 @@
   
       <div class="navbar-end">
         <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -126,14 +119,12 @@
   </div>
 </div>
 
-<div class="ress">
-  <div class="banner"> <!--Bloque-->
+<p class="centrar margenTop"> <!--RESUMEN DEL PARCHE-->
+  <img class="centrar m0" src="multimedia/resumen11.9.jpg" alt="" width="70%"> <!--Bloque-->
+</p>
 
-  </div>
-</div>
-
-<div class="intro container mx-auto w-26 bordeSolido">
-  <div class="texto"> <!--Bloque-->
+<div class="intro container mx-auto w-26 bordeSolido"> <!--COMO FUNCIONA NUESTRA METODOLOGIA-->
+  <div class="texto">
     <h3 class="texto__titulo"> Methodology TLDR </h3>
       <p class="texto__texto">Esta lista fue seleccionada en colaboración con nuestros expertos de la Liga: Adam 'Moriarty' Isles, Dan 'Aux' Harrison y Phy, y nuestros especialistas en funciones: Shikari, Only, Command Attack y Yen. A diferencia de la mayoría de las listas de niveles, publicamos la nuestra antes, o como un parche se pone en marcha, de acuerdo con las predicciones de nuestra institucion</p>
       <ul class="texto__texto">
@@ -145,10 +136,9 @@
   </div>
 </div>
 
-<div class="tierGeneral">
-  <div class="laGenerala"> <!--Bloque-->
-</div>
-</div>
+<p class="centrar margenTop"> <!--LISTA GENERAL-->
+  <img class="centrar m0" src="multimedia/tierlist.jpg" alt="" width="50%"> <!--Bloque-->
+</p>
 
 <div class="intro container mx-auto w-26 bordeSolido margenBot">
   <div class="texto"> <!--Bloque-->
@@ -163,13 +153,16 @@
   </div>
 </div>
 
+<p class="centrar margenTop margenBot"> <!--HIGH ELO LIST-->
+  <img class="centrar m0" src="multimedia/tierlist.jpg" alt="" width="50%"> <!--Bloque-->
+</p>
 
   <footer> <!--Bloque-->
     <div class="centrar">
       <div class="container">
         <div class="row">
           <div class="col-4">
-            <p class="pad20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+            <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
             <p> <br><br> Unite a nuestro discord:</p>
             <p> <br><br><br> seguinos en las redes</p>
             <p><br><br><br><br>
@@ -177,44 +170,40 @@
           </div>
           <div class="col">
             <h4 class="fTitulos">TOP</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">JUNGLA</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">MID</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">ADC</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
           <div class="col">
             <h4 class="fTitulos">SUPPORT</h4>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
-            <p class="pad20"><a href="#">Tier list top </a></p>
+            <p class="pad20"><a href="#">Inicio </a></p>
+            <p class="pad20"><a href="#">Podio </a></p>
+            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
+            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
           </div>
+          
         </div>
       </div>
   </div>
