--- a/jg.html
+++ b/jg.html
@@ -103,7 +103,7 @@
     <h3 class="jg__subtitulo"> Tier List para escalar en SoloQ </h3>
   </div>
 
-  <div class="intro">
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
         <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
@@ -112,28 +112,27 @@
     </div>
   </div>
 
-  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar">
+  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
       <div class="card h-100">
-        <img src="multimedia/morgana.jpg" class="card-img-top  zoom" alt="...">
-        <div class="card-body silver">
-          <h5 class="card-title">Morgana</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, esse?</p>
+        <img src="multimedia/olaf.jpg" class="card-img-top zoom" alt="...">
+        <div class="card-body gold">
+          <h5 class="card-title colorNegroT">Olaf </h5>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Ver runas en Probuilds</small>
+          <a href="https://www.probuilds.net/champions/details/86"> <small class="text-muted">Ver runas en Probuilds</small></a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="multimedia/diana.jpg" class="card-img-top zoom" alt="...">
-        <div class="card-body gold">
-          <h5 class="card-title">Diana</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, reiciendis.</p>
+        <img src="multimedia/morgana.jpg" class="card-img-top zoom" alt="...">
+        <div class="card-body silver">
+          <h5 class="card-title colorNegroT">Morgana</h5>
+          
         </div>
         <div class="card-footer">
-          <small class="text-muted">Ver runas en Probuilds</small>
+          <a href="https://www.probuilds.net/champions/details/98"> <small class="text-muted">Ver runas en Probuilds</small></a>
         </div>
       </div>
     </div>
@@ -141,37 +140,50 @@
       <div class="card h-100">
         <img src="multimedia/rammus.jpg" class="card-img-top zoom" alt="...">
         <div class="card-body bronce">
-          <h5 class="card-title">Rammus</h5>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, optio?</p>
+          <h5 class="card-title colorNegroT">Sett</h5>
+          
         </div>
         <div class="card-footer">
-          <a href="probuilds.com"> <small class="text-muted">Ver runas en Probuilds</small></a>
+          <a href="https://www.probuilds.net/champions/details/875"> <small class="text-muted">Ver runas en Probuilds</small></a>
         </div>
       </div>
     </div>
   </div>
   
-  <div class="comms">
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
-      <h3 class="texto__titulo">Mejor JUNGLA del parche: Diana</h3>
+      <h3 class="texto__titulo">Mejor TOP del parche: SHEN</h3>
         <ul class="texto__texto">
-            <li>Sus estadísticas de base son sólidas y el hecho de que tenga acceso a tanta explosión le permite ejecutar objetivos críticos que son especialmente vitales con lo fuertes que son los ADC.</li>
-            <li>Busca jugar alrededor de los carriles que tienen CC para configurarte y podrás ser alimentado en poco tiempo.</li>
+            <li>Shen hace un gran trabajo de impacto en el mapa gracias a su definitiva global que acaba de ser potenciado para escalar con HP extra, lo que significa que será realmente sustancial en las etapas posteriores del juego.</li>
+            <li>Por mucho que Shen pueda utilizar su ult para ayudar alrededor del mapa es un laner sólido encima de eso, siendo capaz de manejar enfrentamientos cuerpo a cuerpo bastante cómodamente debido a su capacidad para bloquear auto-ataques y hacer uso de Grasp para manejar moretones.</li>
+            <li>Los emparejamientos a distancia pueden ser más complicados, pero es capaz de usar su burla para configurar ganks y buscar castigarlos.</li>
         </ul>
+        <br>
+        <p class="texto__texto">A continuacion les dejamos las runas e itemizacion optima del campeon.</p>
     </div>
   </div>
 
-  
-  <div class="experto">
-      <div class="comm">
-        <iframe width="50%" height="540" src="https://www.youtube.com/watch?v=ZzaHa3-og8s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
-      </div>
-  </div>
+  <section class="runasybuild centrar">
+  <img class="centrar" src="multimedia/olafsovich.jpg" alt="">
+  <img class="centrar" src="multimedia/.png" alt="">
+</section>
 
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
+      <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
+      <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
+      <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
+  </div>
+</div>
+
+  <p class="experto pad20 centrar">
+        <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
+  </p>
 
 
   <footer> <!--Bloque-->
-    <div class="centrar">
+    <div class="centrar margenTop">
       <div class="container">
         <div class="row">
           <div class="col-4">
