--- a/top.html
+++ b/top.html
@@ -89,7 +89,7 @@
     <h3 class="top__subtitulo"> Tier List para escalar en SoloQ </h3>
   </div>
 
-  <div class="intro">
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
         <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
@@ -98,28 +98,27 @@
     </div>
   </div>
 
-  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot">
+  <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
       <div class="card h-100">
-        <img src="multimedia/garen.jpg" class="card-img-top zoom" alt="...">
-        <div class="card-body silver">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, repellat!</p>
+        <img src="multimedia/shen.jpg" class="card-img-top zoom" alt="...">
+        <div class="card-body gold">
+          <h5 class="card-title colorNegroT">Shen </h5>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Ver runas en Probuilds</small>
+          <a href="https://www.probuilds.net/champions/details/86"> <small class="text-muted">Ver runas en Probuilds</small></a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card h-100">
-        <img src="multimedia/shen.jpg" class="card-img-top zoom" alt="...">
-        <div class="card-body gold">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, sequi?</p>
+        <img src="multimedia/garen.jpg" class="card-img-top zoom" alt="...">
+        <div class="card-body silver">
+          <h5 class="card-title colorNegroT">Garen</h5>
+          
         </div>
         <div class="card-footer">
-          <small class="text-muted">Ver runas en Probuilds</small>
+          <a href="https://www.probuilds.net/champions/details/98"> <small class="text-muted">Ver runas en Probuilds</small></a>
         </div>
       </div>
     </div>
@@ -127,17 +126,17 @@
       <div class="card h-100">
         <img src="multimedia/sett.jpg" class="card-img-top zoom" alt="...">
         <div class="card-body bronce">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, repellat?</p>
+          <h5 class="card-title colorNegroT">Sett</h5>
+          
         </div>
         <div class="card-footer">
-          <a href="www.probuilds.net"> <small class="text-muted">Ver runas en Probuilds</small></a>
+          <a href="https://www.probuilds.net/champions/details/875"> <small class="text-muted">Ver runas en Probuilds</small></a>
         </div>
       </div>
     </div>
   </div>
   
-  <div class="comms">
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h3 class="texto__titulo">Mejor TOP del parche: SHEN</h3>
         <ul class="texto__texto">
@@ -145,17 +144,32 @@
             <li>Por mucho que Shen pueda utilizar su ult para ayudar alrededor del mapa es un laner sólido encima de eso, siendo capaz de manejar enfrentamientos cuerpo a cuerpo bastante cómodamente debido a su capacidad para bloquear auto-ataques y hacer uso de Grasp para manejar moretones.</li>
             <li>Los emparejamientos a distancia pueden ser más complicados, pero es capaz de usar su burla para configurar ganks y buscar castigarlos.</li>
         </ul>
+        <br>
+        <p class="texto__texto">A continuacion les dejamos las runas e itemizacion optima del campeon.</p>
     </div>
   </div>
 
-  <div class="experto">
-      <div class="tutos">
-        <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
-      </div>
+  <section class="runasybuild centrar">
+  <img class="centrar" src="multimedia/shennnn.png" alt="">
+  <img class="centrar" src="" alt="">
+</section>
+
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
+      <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
+      <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
+      <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
   </div>
+</div>
+
+  <p class="experto pad20 centrar">
+        <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
+  </p>
+
 
   <footer> <!--Bloque-->
-    <div class="centrar">
+    <div class="centrar margenTop">
       <div class="container">
         <div class="row">
           <div class="col-4">
