--- a/bot.html
+++ b/bot.html
@@ -153,7 +153,7 @@
   </div>
 
   <footer> <!--Bloque-->
-    <div class="centrar">
+    <div class="centrar margenTop">
       <div class="container">
         <div class="row">
           <div class="col-4">
