--- a/supp.html
+++ b/supp.html
@@ -152,7 +152,7 @@
   </div>
 
   <footer> <!--Bloque-->
-    <div class="centrar">
+    <div class="centrar margenTop">
       <div class="container">
         <div class="row">
           <div class="col-4">
