--- a/bot.html
+++ b/bot.html
@@ -68,24 +68,10 @@
 
         </div>
       </div>
-  
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
   </nav>
-  <div class="fondoBot">
-    <h2 class="bot__titulo" > <span>LoL parche 11.9</span></h2>
-    <h3 class="bot__subtitulo"> Tier List para escalar en SoloQ </h3>
+  <div class="">
+    <img src="multimedia/kalista.jpg" alt="" width="100%">
   </div>
   <div class="intro">
     <div class="texto"> <!--Bloque-->
