--- a/index.html
+++ b/index.html
@@ -22,67 +22,63 @@
 </head>
 <body class="">
   <header>
-  <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
-    <section class="navbar-brand">
-      <a class="navbar-item" href="index.html">
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
-      </a>
-  
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </section>
-  
-    <div id="navbarBasicExample" class="navbar-menu">
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link grisesito">
-          Mejores campeones por línea
+    <!-- NAVBAR -->
+    <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand">
+        <a class="navbar-item" href="index.html">
+          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="50" height="28">
         </a>
-
-        <div class="navbar-dropdown">
-          <a href="top.html" class="navbar-item">
-          TOP
-          </a>
-          <a href="jg.html" class="navbar-item">
-          JUNGLA
-          </a>
-          <a href="mid.html" class="navbar-item">
-          MID
-          </a>
-          <a href="bot.html" class="navbar-item">
-          ADC
-            </a>
-            <a href="supp.html" class="navbar-item">
-              SOPORTE
-              </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            SINERGIAS
-          </a>
-        </div>
-        
+    
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
       <div class="navbar-start">
-        <a href="supp.html" class="navbar-item grisesito">
-         Guías
+        <a href="index.html" class="navbar-item grisesito">
+         Home
         </a>
-
         </div>
-      </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link grisesito">
+            Mejores campeones por línea
+          </a>
   
-      <div class="navbar-end">
-        <div class="navbar-item">
+          <div class="navbar-dropdown">
+            <a href="top.html" class="navbar-item">
+            TOP
+            </a>
+            <a href="jg.html" class="navbar-item">
+            JUNGLA
+            </a>
+            <a href="mid.html" class="navbar-item">
+            MID
+            </a>
+            <a href="bot.html" class="navbar-item">
+            ADC
+              </a>
+              <a href="supp.html" class="navbar-item">
+                SOPORTE
+                </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item">
+              SINERGIAS
+            </a>
+          </div>
+
+          <div class="navbar-start">
+            <a href="index.html" class="navbar-item grisesito">
+              Guias
+            </a>
+            </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 </header>
-<div class="fondoPrincipal w-screen">
-
-  <h1 class="fondo__titulo" > <span>LoL parche 11.9</span></h1>
-  <h2 class="fondo__subtitulo"> Tier List para escalar en SoloQ </h2>
-
+<div class=" w-screen">
+  <img src="multimedia/vlad.jpg" alt="" width="100%">
 </div>
 
 <div class="intro container mx-auto w-26 bordeSolido">
@@ -114,8 +110,8 @@
       <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
       <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
       <p class="texto__texto">A continuacion el resumen del parche</p>
-      <p class="botones"> <a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">lista General</a>
-        <a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">High Elo</a></p>
+      <p class="botones centrar"><a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">lista General</a>
+      <a href="#" class="btn btn-primary btn-lg disabled centrar" tabindex="-1" role="button" aria-disabled="true">High Elo</a></p>
   </div>
 </div>
 
