--- a/jg.html
+++ b/jg.html
@@ -84,23 +84,12 @@
         </div>
       </div>
   
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
-      </div>
+
     </div>
   </nav>
-  <div class="fondoJg">
-    <h2 class="jg__titulo" > <span>LoL parche 11.9</span></h2>
-    <h3 class="jg__subtitulo"> Tier List para escalar en SoloQ </h3>
+
+  <div>
+    <img src="multimedia/kayn.jpg" alt="" width="100%">
   </div>
 
   <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
