--- a/mid.html
+++ b/mid.html
@@ -70,24 +70,11 @@
         </div>
       </div>
   
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
   </nav>
 </header>
-  <div class="fondoMid">
-    <h2 class="mid__titulo" > <span>LoL parche 11.9</span></h2>
-    <h3 class="mid__subtitulo"> Tier List para escalar en SoloQ </h3>
+  <div>
+<img src="multimedia/syndra.jpg" alt="" width="100%">
 </div>
 <div class="intro">
     <div class="texto"> <!--Bloque-->
