--- a/top.html
+++ b/top.html
@@ -84,12 +84,15 @@
     </div>
   </nav>
 
+  <!-- banner -->
+  <div class="fade">
+  </div>
   <div class="fondoTop">
-    <h2 class="top__titulo" > <span>LoL parche 11.9</span></h2>
-    <h3 class="top__subtitulo"> Tier List para escalar en SoloQ </h3>
+  </div>
+  <div class="fade">
   </div>
 
-  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="intro bordeSolido margenBot  bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h3 class="texto__titulo"> ¡Bienvenido a la lista de niveles predictivos de League of Legends para el parche 11.9! </h3>
         <p class="texto__texto">¿Listo para escalar a lo largo de la temporada 11 de LoL? ¡Has venido al lugar correcto!</p>
@@ -141,8 +144,8 @@
       <h3 class="texto__titulo">Mejor TOP del parche: SHEN</h3>
         <ul class="texto__texto">
             <li>Shen hace un gran trabajo de impacto en el mapa gracias a su definitiva global que acaba de ser potenciado para escalar con HP extra, lo que significa que será realmente sustancial en las etapas posteriores del juego.</li>
-            <li>Por mucho que Shen pueda utilizar su ult para ayudar alrededor del mapa es un laner sólido encima de eso, siendo capaz de manejar enfrentamientos cuerpo a cuerpo bastante cómodamente debido a su capacidad para bloquear auto-ataques y hacer uso de Grasp para manejar moretones.</li>
-            <li>Los emparejamientos a distancia pueden ser más complicados, pero es capaz de usar su burla para configurar ganks y buscar castigarlos.</li>
+           <br> <li>Por mucho que Shen pueda utilizar su ult para ayudar alrededor del mapa es un laner sólido encima de eso, siendo capaz de manejar enfrentamientos cuerpo a cuerpo bastante cómodamente debido a su capacidad para bloquear auto-ataques y hacer uso de Grasp para manejar moretones.</li>
+           <br> <li>Los emparejamientos a distancia pueden ser más complicados, pero es capaz de usar su burla para configurar ganks y buscar castigarlos.</li>
         </ul>
         <br>
         <p class="texto__texto">A continuacion les dejamos las runas e itemizacion optima del campeon.</p>
