principios de responsive y estructura final

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       <P class="texto__texto">Si regresas de un descanso desde la temporada 10, muchos de nuestros rankings serán dictados por los nuevos artículos, así que asegúrate de entender todos los cambios con nuestro video de objetos míticos.</P>
       <p class="texto__texto">El pick estrella de este parche es <strong>Lee Sin</strong> debido a su flexibilidad /(?) </p>
       <p class="texto__texto">A continuacion el resumen del parche</p>
-      <p class="botones centrar"><a href="#" class="btn btn-primary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">lista General</a>
-      <a href="#" class="btn btn-primary btn-lg disabled centrar" tabindex="-1" role="button" aria-disabled="true">High Elo</a></p>
+      <p class="botones "><a href="#general" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list General</a>
+      <a href="#HighElo" class="btn btn-primary btn-lg botones " tabindex="-1" role="button" aria-disabled="true">Tier list High Elo</a></p>
   </div>
 </div>
 
@@ -132,7 +132,7 @@
   </div>
 </div>
 
-<p class="centrar margenTop"> <!--LISTA GENERAL-->
+<p id="general" class="centrar margenTop"> <!--LISTA GENERAL-->
   <img class="centrar m0" src="multimedia/tierlist.jpg" alt="" width="50%"> <!--Bloque-->
 </p>
 
@@ -149,7 +149,7 @@
   </div>
 </div>
 
-<p class="centrar margenTop margenBot"> <!--HIGH ELO LIST-->
+<p id="HighElo" class="centrar margenTop margenBot"> <!--HIGH ELO LIST-->
   <img class="centrar m0" src="multimedia/tierlist.jpg" alt="" width="50%"> <!--Bloque-->
 </p>
 
@@ -161,7 +161,7 @@
             <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
             <p> <br><br> Unite a nuestro discord:</p>
             <p> <br><br><br> seguinos en las redes</p>
-            <p><br><br><br><br>
+            <p><br><br>
             hecho por ferxdxdddd</p>
           </div>
           <div class="col">
