--- a/top.html
+++ b/top.html
@@ -24,7 +24,7 @@
   <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="index.html">
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="112" height="28">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fgamepedia.cursecdn.com%2Flolesports_gamepedia_en%2F7%2F75%2FVladimirSquare.png&f=1&nofb=1" width="30" height="28">
       </a>
   
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -36,6 +36,9 @@
   
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-item has-dropdown is-hoverable">
+        <a href="index.html" class="navbar-item grisesito">
+          Home
+         </a>
         <a class="navbar-link grisesito">
           Mejores campeones por línea
         </a>
@@ -69,28 +72,11 @@
         </div>
       </div>
   
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="buttons">
-            <a class="button is-primary">
-              <strong>Sign up</strong>
-            </a>
-            <a class="button is-light">
-              Log in
-            </a>
-          </div>
-        </div>
-      </div>
     </div>
   </nav>
 
   <!-- banner -->
-  <div class="fade">
-  </div>
-  <div class="fondoTop">
-  </div>
-  <div class="fade">
-  </div>
+<div><img src="multimedia/urgot.jpg" alt="" width="100%"></div>
 
   <div class="intro bordeSolido margenBot  bordeSolido">
     <div class="texto"> <!--Bloque-->
@@ -166,6 +152,8 @@
   </div>
 </div>
 
+<!-- VIDEO -->
+
   <p class="experto pad20 centrar">
         <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
   </p>
@@ -179,7 +167,7 @@
             <p class="pad20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
             <p> <br><br> Unite a nuestro discord:</p>
             <p> <br><br><br> seguinos en las redes</p>
-            <p><br><br><br><br>
+            <p><br><br>
             hecho por ferxdxdddd</p>
           </div>
           <div class="col">
