--- a/supp.html
+++ b/supp.html
@@ -79,7 +79,7 @@
 
 
   <div class="">
-    <img src="multimedia/thresh.jpg" alt="" width="100&">
+    <img src="multimedia/thresh.jpg" alt="" width="100%">
 
   </div>
   <div class="intro">
